# pdbbind_dock

./: .gitignore  Runner.py  affinity_ml_plaground.ipynb  analysis.ipynb  apply_protocol.py  clean_pdb.py  data.py  enviroment.yml  extract_docking_dataframe.ipynb  extract_docking_stats.py  failed_log_analysis.ipynb  generate_docking_plot.py  h5_analysis.ipynb  h5_size.py  load_ligand.py  load_pose.py  main.py  pathfinder.ipynb  pdbbind_dock.py  pdbbind_filter.ipynb  prepare_dataset.py  pyproject.toml  results_unpacker.ipynb  run_all.slurm  run_all_2.slurm  run_astex.slurm  run_local.sh  run_posebuster.slurm  zarr_analysis.ipynb  zarr_cleanup_and_experiments.ipynb
2016_core_set/: validation_set-core-test.md
docking_analysis/: __init__.py  clustering.py  constants.py  data.py  experiment.py  figures.py  reweighting.py  scfx_weights.json
failed_pdb_ids/: astex.txt  pdbbind.txt  posebuster.txt
figures/: reweighting_filtered_mean_weights.csv  reweighting_mean10_weights.csv  reweighting_min_weights.csv
xml_protocols/: docking_std.xml
