[project]
name = "pdbbind-dock"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "plinder>=0.2.25",
    "pyrosetta",
    "rdkit>=2025.9.1",
    "scipy>=1.16.3",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
]

[tool.uv.sources]
pyrosetta = { url = "https://graylab.jhu.edu/download/PyRosetta4/archive/release/PyRosetta4.Release.python311.ubuntu.wheel/pyrosetta-2025.47+release.8bb54e8a6d-cp311-cp311-linux_x86_64.whl" }
